# Horizon

./: .gitignore  README.md  archivist_patch.py  config.py  fix_archivist.py  install.sh  main.py  mcp_bridge.py  patch_chat.py  patch_main.py  patch_plugins.py  patch_tools.py  patch_tools2.py  patch_tools_tests.py  requirements.txt  search_web.py  setup-windows.ps1  test_stream.json  test_tools.json  transcribe.py  update.sh  update_notes.py
.github/workflows/: release.yml
agent/: consolidate.py  core.py  memory.py  tools.py  vision.py
assets/: comfyui-flux-i2i-workflow.json  comfyui-flux-workflow.json  comfyui-i2v-workflow.json  comfyui-inpaint-workflow.json  comfyui-pony-i2i-workflow.json  comfyui-t2v-workflow.json
docs/: CODE_TAB_GUIDE.md
graphify-out/: .graphify_analysis.json  .graphify_root  GRAPH_REPORT.md  GRAPH_TREE.html  graph.html  graph.json
graphify-out/2026-06-03/: .graphify_semantic_marker  GRAPH_REPORT.md  graph.json  (+1 more)
src/: index.html  main.js  slash.css  style.css
src-tauri/: Cargo.toml  patch_pax.py  tauri.conf.json  test_turbovec.rs
src-tauri/assets/: comfyui-default-workflow.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: antenna.rs  app_state.rs  archivist.rs  armata.rs  audio.rs  chat.rs  cinema.rs  code_preview.rs  comfyui.rs  commands.rs  curiosity.rs  daemon_manager.rs  debug_pptx.py  diagnostic.rs  embeddings.rs  file_reader.rs  forge.rs  forge_daemon.rs  graphify.rs  ide_agent.rs  image_store.rs  main.rs  mcp.rs  md_converter.rs  memory.rs  metrics.rs  office.rs  office_reader.py  ollama.rs  openclaude.rs  pax_daemon.rs  plugins.rs  pptx_gen.py  pptx_native.rs  pty.rs  pyenv.rs  roleplay.rs  search.rs  settings.rs  sys_diagnostic.rs  (+5 more)
src-tauri/src/tools/: mod.rs
tests/: conftest.py  test_core.py  test_indexer.py  test_manager.py  test_memory.py  test_tools.py
tui/: app.py
vault/: indexer.py  manager.py
workspace/: hello.py  notes.md
(+18 files in other folders)
