[package]
name = "horizon"
version = "2.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
futures-util = "0.3"
tokio-tungstenite = "0.24"
shellexpand = "3"
base64 = "0.22"
png = "0.17"
regex = "1"
urlencoding = "2"
once_cell = "1.19"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
pdf-extract = "0.10.0"
docx-rs = "0.4.15"
rust_xlsxwriter = "0.78.0"
lazy_static = "1.4.0"
notify = "6"
zip = { version = "2", default-features = false, features = ["deflate"] }
axum = { version = "0.7", features = ["tokio"] }
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
tempfile = "3"
